# giga-mcp-server

./: .dockerignore  .env.example  .gitignore  .worktreeinclude  ARCHITECTURE.md  BITBUCKET-SUPPORT.md  CLAUDE.md  Dockerfile  LICENSE  MOBILE-CONNECTOR-OAUTH.md  MULTI-CLIENT-INTEGRATION.md  PLANE-SUPPORT.md  PROVISIONING-NEW-BOARD.md  PUNCH-TAMAGOTCHI-PLAN.md  RALPH-BACKLOG.md  RALPH.md  README.md  STATIC-SITE-HOSTING.md  apprunner.yaml  deploy.sh  docker-compose.yml  docker-entrypoint.sh  fly.toml  giga-mcp-server-usage-guide.md  inspect-local.sh  inspect-remote.sh  pyproject.toml
.github/workflows/: bump-version.yml  ci.yml  deploy.yml  jira-done-on-merge.yml
infra/: cdk.context.json  cdk.json  package-lock.json  package.json
infra/cdk.out/: GigaMcpServer.assets.json  GigaMcpServer.template.json  GigaMcpServerCompute.assets.json  GigaMcpServerCompute.template.json  GigaMcpServerEcr.assets.json  GigaMcpServerEcr.template.json  (+4 more)
scripts/: connect-claude-desktop.sh  deploy.sh  inspect-local.sh  inspect-remote.sh  jira-ralph-loop.sh  launch-claude-desktop.sh  migrate-gigacorp-domain.sh  ralph-loop.sh  setup-auth.sh  setup-pinecone.sh  setup-ssm.sh  setup-static-site.sh  smoke_pipeline.py
tests/: conftest.py  test_agent_model_routing.py  test_auth.py  test_config.py  test_dedup.py  test_enrichment.py  test_github_ci_poll.py  test_jira_client.py  test_jira_wiki.py  test_llm_parser.py  test_oauth_metadata.py  test_parser.py  test_pipeline.py  test_pipeline_ci_gate.py  test_retry.py  test_rule_packs.py  test_server_info.py  test_webhook.py  test_whatsapp_client.py
(+33 files in other folders)
